--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,56 +4,217 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <style>
+    
+
+    body {
+      
+      align-items: center;
+      background-color: #15172b;
+      display: flex;
+      justify-content: center;
+      height: 220vh;
+      
+    }
+
+    .form {
+      background-color: #15172b;
+      border-radius: 20px;
+      box-sizing: border-box;
+      height: 1500px;
+      padding: 20px;
+      width: 320px;
+    }
+
+    .title {
+      color: #eee;
+      font-family: sans-serif;
+      font-size: 36px;
+      font-weight: 600;
+      margin-top: 30px;
+    }
+
+    .subtitle {
+      color: #eee;
+      font-family: sans-serif;
+      font-size: 16px;
+      font-weight: 600;
+      margin-top: 10px;
+    }
+
+    .input-container {
+      height: 50px;
+      position: relative;
+      width: 100%;
+    }
+
+    .ic1 {
+      margin-top: 40px;
+    }
+
+    .ic2 {
+      margin-top: 30px;
+    }
+
+    .input {
+      background-color: #303245;
+      border-radius: 12px;
+      border: 0;
+      box-sizing: border-box;
+      color: #eee;
+      font-size: 18px;
+      height: 100%;
+      outline: 0;
+      padding: 4px 20px 0;
+      width: 100%;
+    }
+
+    .cut {
+      background-color: #15172b;
+      border-radius: 10px;
+      height: 20px;
+      left: 20px;
+      position: absolute;
+      top: -20px;
+      transform: translateY(0);
+      transition: transform 200ms;
+      width: 76px;
+    }
+
+    .cut-short {
+      width: 50px;
+    }
+
+    .input:focus ~ .cut,
+    .input:not(:placeholder-shown) ~ .cut {
+      transform: translateY(8px);
+    }
+
+    .placeholder {
+      color: #65657b;
+      font-family: sans-serif;
+      left: 20px;
+      line-height: 14px;
+      pointer-events: none;
+      position: absolute;
+      transform-origin: 0 50%;
+      transition: transform 200ms, color 200ms;
+      top: 20px;
+    }
+
+    .input:focus ~ .placeholder,
+    .input:not(:placeholder-shown) ~ .placeholder {
+      transform: translateY(-30px) translateX(10px) scale(0.75);
+    }
+
+    .input:not(:placeholder-shown) ~ .placeholder {
+      color: #808097;
+    }
+
+    .input:focus ~ .placeholder {
+      color: #dc2f55;
+    }
+
+    .submit {
+      background-color: #08d;
+      border-radius: 12px;
+      border: 0;
+      box-sizing: border-box;
+      color: #eee;
+      cursor: pointer;
+      font-size: 18px;
+      height: 50px;
+      margin-top: 38px;
+       outline: 0;
+      text-align: center;
+      width: 100%;
+    }
+
+    .submit:active {
+      background-color: #06b;
+    }
+
+  </style>
 </head>
 <body>
     <form action="/submit" method="post">
-        <label for="name">Name</label>
-       <input type="text" name="name" placeholder="Enter your name">
-       <br>
-       <br>
-       <label for="January">January</label>
-       <input type="text" name="January">
-       <br><br>
-       <label for="February">February</label>
-       <input type="text" name="February">
-       <br><br>
-       <label for="March">March</label>
-       <input type="text" name="March">
-       <br> <br>
-       <label for="April">April</label>
-       <input type="text" name="April">
-       <br> <br>
-       <label for="May">May</label>
-       <input type="text" name="May">
-       <br> <br>
-       <label for="June">June</label>
-       <input type="text" name="June">
-       <br> <br>
-       <label for="July">July</label>
-       <input type="text" name="July">
-       <br> <br>
-       <label for="August">August</label>
-       <input type="text" name="August">
-       <br> <br>
-       <label for="September">September</label>
-       <input type="text" name="September">
-       <br> <br> 
-       <label for="October">October</label>
-       <input type="text" name="October">
-       <br> <br>
-       <label for="November">November</label>
-       <input type="text" name="November">
-       <br> <br>
-       <label for="December">December</label>
-       <input type="text" name="December">
-       <br> <br>
-       <label for="Location">Location</label>
-       <input type="text" name="Location">
-       <br> <br>
-       <label for="City">City</label>
-       <input type="text" name="City">
-       <br> <br>
-       <button>Submit</button>
+       <div class="form">
+         <div class="title">Welcome</div>
+         <div class="subtitle">Let's Analyse your Electricity !</div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">January</label>
+         </div>
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">February</label>
+         </div>
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">March</label>
+         </div>
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">April</label>
+         </div>
+
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">May</label>
+         </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">June</label>
+         </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">July</label>
+         </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">August</label>
+         </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">September</label>
+         </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">October</label>
+         </div>
+
+         <div class="input-container ic2">
+           <input id="lastname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="lastname" class="placeholder">November</label>
+         </div>
+         <div class="input-container ic2">
+           <input id="email" class="input" type="text" placeholder=" " />
+           <div class="cut cut-short"></div>
+           <label for="email" class="placeholder">December</>
+         </div>
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">Location</label>
+         </div>
+       <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " />
+           <div class="cut"></div>
+           <label for="firstname" class="placeholder">City</label>
+         </div>
+         <button type="text" class="submit">submit</button>
+       </div>
     </form>
 </body>
 </html>
