--- a/views/form.ejs
+++ b/views/form.ejs
@@ -142,74 +142,79 @@
          <div class="title">Welcome</div>
          <div class="subtitle">Let's Analyse your Electricity !</div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+            <input id="firstname" class="input" type="text" placeholder=" " name="name" />
+            <div class="cut"></div>
+            <label for="firstname" class="placeholder">name</label>
+          </div>
+         <div class="input-container ic1">
+           <input id="firstname" class="input" type="text" placeholder=" " name="January" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">January</label>
          </div>
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="February"/>
            <div class="cut"></div>
            <label for="firstname" class="placeholder">February</label>
          </div>
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" "name="March" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">March</label>
          </div>
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="April"/>
            <div class="cut"></div>
            <label for="firstname" class="placeholder">April</label>
          </div>
 
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" "name="May" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">May</label>
          </div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="June" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">June</label>
          </div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" "name="July" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">July</label>
          </div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="August" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">August</label>
          </div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="September" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">September</label>
          </div>
          <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="October" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">October</label>
          </div>
 
          <div class="input-container ic2">
-           <input id="lastname" class="input" type="text" placeholder=" " />
+           <input id="lastname" class="input" type="text" placeholder=" " name="November" />
            <div class="cut"></div>
            <label for="lastname" class="placeholder">November</label>
          </div>
          <div class="input-container ic2">
-           <input id="email" class="input" type="text" placeholder=" " />
+           <input id="email" class="input" type="text" placeholder=" " name="December" />
            <div class="cut cut-short"></div>
-           <label for="email" class="placeholder">December</>
+           <label for="email" class="placeholder">December</label>
          </div>
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="Location" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">Location</label>
          </div>
        <div class="input-container ic1">
-           <input id="firstname" class="input" type="text" placeholder=" " />
+           <input id="firstname" class="input" type="text" placeholder=" " name="City" />
            <div class="cut"></div>
            <label for="firstname" class="placeholder">City</label>
          </div>
