--- a/views/tempresult.ejs
+++ b/views/tempresult.ejs
@@ -255,7 +255,7 @@ header h2 {
   </button>
   <div class="chatbot">
     <header>
-      <h2>Bhuvan.Ai</h2>
+      <h2>URJA AI</h2>
       <span class="close-btn material-symbols-outlined">close</span>
     </header>
     <ul class="chatbox">
