--- a/views/tempresult.ejs
+++ b/views/tempresult.ejs
@@ -40,6 +40,12 @@ body {
   background: #E3F2FD;
   background-image: url('https://blogassets.leverageedu.com/blog/wp-content/uploads/2020/05/07221706/concept-of-sustainable-development.jpg');
 }
+.back-video{
+  position: absolute;
+  right:0;
+  bottom: 0;
+  z-index: -1;
+}
 .chatbot-toggler {
   position: fixed;
   bottom: 30px;
@@ -231,6 +237,8 @@ header h2 {
   
 
 <body>
+
+  <video src="https://cdn.pixabay.com/video/2019/10/15/27947-366570961_large.mp4" autoplay loop muted plays-inline class="back-video"></video>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">URJA AI</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
