--- a/views/solarcalculated.ejs
+++ b/views/solarcalculated.ejs
@@ -3,11 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solar Panel Calculated Result</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #15172b;
+            margin: 0;
+            padding: 0;
+            background-image: url('AdobeStock_748830489_Preview.jpeg');
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+        }
+        h1 {
+            color: #05107f ;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .result {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 5px;
+            margin-top: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        p {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+        strong {
+            font-weight: bold;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Total number of panels required are: <%=numberofpanels%> </h1>
-    <h1>Capacity of each solar panel should be: <%=requiredenergypersolarpanel%> </h1>
-    <h1>Total cost of installation of solar panels would be : <%=totalcost%> </h1>
+    <div class="container">
+        <h1>Solar Panel Calculated Result</h1>
+        <div class="result">
+            <p>Total number of panels required: <strong><%=numberofpanels%> </strong></p>
+            <p>Capacity of each panel will be: <strong><%=capacityofeachpanel%> KW</strong></p>
+            <p>Total cost of installation will be: <%=costofinstallation%> </p>
+            <p>Your payback period will be: <%=timeinyears%> years</p>
+        </div>
+    </div>
 </body>
 </html>
