--- a/views/tempresult.ejs
+++ b/views/tempresult.ejs
@@ -238,7 +238,7 @@ header h2 {
 
 <body>
 
-  <video src="https://cdn.pixabay.com/video/2019/10/15/27947-366570961_large.mp4" autoplay loop muted plays-inline class="back-video"></video>
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">URJA AI</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -249,10 +249,16 @@ header h2 {
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="mailto:yash.gupta.ug23@nsut.ac.in">Contact us</a>
+        <li class="nav-item active" style="margin-left: 5px; margin-right: 5px;">
+          <form action="/form" method="get">
+            <button class="btn btn-primary">Calculate for your monthly Electricity Bill </button>
+          </form>
         </li>
-
+        <li>
+          <form action="/solarcal" method="get" style="margin-left: 5px; margin-right: 5px;">
+            <button class="btn btn-info">Review solar panel for your home  </button>
+          </form>
+        </li>
       </ul>
     </div>
   </nav>
