Fixed background video

--- a/views/tempresult.ejs
+++ b/views/tempresult.ejs
@@ -17,7 +17,6 @@
   <script src="https://kit.fontawesome.com/beac85e0c4.js" crossorigin="anonymous"></script>
   <style>
     body {
-      background-image: url('https://img.freepik.com/premium-photo/environmental-protection-issues-related-sustainable-development_941466-7444.jpg');
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -38,7 +37,6 @@
 }
 body {
   background: #E3F2FD;
-  background-image: url('https://blogassets.leverageedu.com/blog/wp-content/uploads/2020/05/07221706/concept-of-sustainable-development.jpg');
 }
 .back-video{
   position: absolute;
@@ -238,8 +236,8 @@ header h2 {
 
 <body>
 
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <video src="https://cdn.pixabay.com/video/2019/10/15/27947-366570961_large.mp4" autoplay loop muted plays-inline class="back-video"></video>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:transparent!important">
     <a class="navbar-brand" href="#">URJA AI</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -251,7 +249,7 @@ header h2 {
         </li>
         <li class="nav-item active" style="margin-left: 5px; margin-right: 5px;">
           <form action="/form" method="get">
-            <button class="btn btn-primary">Calculate for your monthly Electricity Bill </button>
+            <button class="btn btn-danger">Calculate for your monthly Electricity Bill </button>
           </form>
         </li>
         <li>
