--- a/views/result.ejs
+++ b/views/result.ejs
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electricity Consumption</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <style>
+        body{
+            background-color: #15172b;
+        }
+    </style>
 </head>
 <body>
-    <p style="font-size: 18px; color: #15172b; text-align: center;">
+
+  
+    <p style="font-size: 18px; color: #15172b; text-align: center; color: white;">
         <%=text%>
     </p>
 
