Changed form a little

--- a/views/solarcalform.ejs
+++ b/views/solarcalform.ejs
@@ -85,7 +85,7 @@
             <label for="roofarea">Total Available Roof Top Area</label>
             <input type="text" name="roofarea" placeholder="Square Meters">
             <br><br>
-            <label for="requiredusage">Required Solar Plant Capacity</label>
+            <label for="requiredusage">Your monthly Electricity Consumption</label>
             <input type="text" name="requiredusage" placeholder="KW">
             <br><br>
             <button type="submit">Submit</button>
