--- a/views/tempresult.ejs
+++ b/views/tempresult.ejs
@@ -40,11 +40,12 @@ body {
 }
 .back-video{
   position: absolute;
-  right:0;
+  right: 0;
   bottom: 0;
   z-index: -1;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
 }
 .chatbot-toggler {
   position: fixed;
